<resources>
    <string name="app_name">Homework#9</string>
    <string name="action_settings">Settings</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_welcome">Hello</string>
    <string name="alert_loginfail_title">Login failure</string>
    <string name="alert_loginfail_message">User doesn\'t exist or password is wrong</string>
    <string name="toast_incompletefields">The fields can not be empty</string>
    <string name="alert_loginsuccess_title">Login success</string>
    <string name="alert_loginsuccess_message">Welcome</string>
    <string name="alert_registration_success_title">User</string>
    <string name="alert_confirm">Ok</string>
</resources>
